# ai-micro-api-sales

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
app/: __init__.py  main.py
app/core/: __init__.py  config.py  model_settings_client.py  security.py
app/db/: __init__.py  session.py
app/middleware/: permission_denial_middleware.py
app/models/: __init__.py  chat.py  master.py  meeting.py  proposal_document.py
app/routers/: __init__.py  chat.py  graph.py  health.py  internal_anonymize.py  internal_chat_tools.py  internal_meeting.py  internal_proposal_pipeline.py  meeting_minutes.py  pricing.py  proposal_chat.py  proposal_documents.py  proposal_pipeline.py  proposals.py  search.py  simulation.py
app/schemas/: __init__.py  chat.py  meeting.py  simulation.py
app/services/: __init__.py  analysis_service.py  audit_client.py  chat_service.py  document_chat_service.py  embedding_service.py  kb_correction.py  llm_client.py  marp_export_service.py  message_bus.py  pipeline_config.py  pipeline_data_loaders.py  pipeline_formatters.py  pipeline_helpers.py  pipeline_memory.py  pipeline_prompts.py  pipeline_run_db.py  pipeline_stages.py  product_data_aggregator.py  (+13 more)
docs/: proposal-kb-guide.md  proposal-pipeline-sequence.md
migrations/: 001_add_embeddings.sql  002_update_vector_dimension.sql  003_add_chat_tables.sql
tests/: __init__.py  conftest.py  test_markdown_table_fixer.py
(+42 files in other folders)
